[gd_scene load_steps=10 format=3 uid="uid://wdam72ei55cg"]

[ext_resource type="Script" path="res://scenes/enemies/enemy.gd" id="1_n7575"]
[ext_resource type="Material" uid="uid://cgls8su2rfgsh" path="res://shaders/flash_shader_material.tres" id="2_qch6t"]
[ext_resource type="Texture2D" uid="uid://d2d6cw5cwmqnm" path="res://PlaceholderAssets/KlassySketchLavaAnt.png" id="3_38ino"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ey3sv"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_54yyh"]
radius = 200.212

[sub_resource type="SpriteFrames" id="SpriteFrames_fcftc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_38ino")
}, {
"duration": 1.0,
"texture": ExtResource("3_38ino")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ba1pi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:material:shader_parameter/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ey3sv"]
resource_name = "hit"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:material:shader_parameter/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ckxfm"]
_data = {
&"RESET": SubResource("Animation_ba1pi"),
&"hit": SubResource("Animation_ey3sv")
}

[node name="Enemy" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 12
script = ExtResource("1_n7575")
health = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ey3sv")

[node name="AttackArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
shape = SubResource("CircleShape2D_54yyh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("2_qch6t")
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_fcftc")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ckxfm")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 50.0
target_desired_distance = 90.0
path_max_distance = 300.0
path_postprocessing = 1

[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="body_exited" from="AttackArea2D" to="." method="_on_attack_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
